test/files/neg/macro-invalidret-nontree.check
Macros_Test_2.scala:2: error: macro implementation has wrong shape:
 required: (c: scala.reflect.macros.Context): c.universe.Tree
 found   : (c: scala.reflect.macros.Context): Int
type mismatch for return type: Int does not conform to c.universe.Tree
  def foo = macro Impls.foo
                        ^
one error found
